language/move-lang/tests/move_check/parser/let_binding_missing_type.move
module M {
    f() {
        let x : = 0; // Test a missing let type (but with a colon)
    }
}
